[package]
name = "mizu-vizu"
version = "0.1.0"
edition = "2021"
license = "MIT OR GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
rubato = "0.12"
rustfft = "6.0.1"
console_engine = "2.5"
cfg-if = "1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["combaseapi", "mmdeviceapi", "audioclient", "mmsystem", "audiosessiontypes", "mmeapi", "mmreg", "ntdef"] }
[target.'cfg(unix)'.dependencies]
libpulse-binding = "2.26.0"
libpulse-simple-binding = "2.25.0"